# BC_Wallet_Qt

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  reply_ref.txt
src/: Blockchain.h  Controller.cpp  Controller.h  DataBaseMain.cpp  DataBaseMain.h  RefCode.txt  Transaction.cpp  Transaction.h  Wallet.cpp  Wallet.h
src/Network/: Connection.cpp  Connection.h  NetClient.cpp  NetClient.h  RawMessage.cpp  RawMessage.h  dnsLockUp.cpp  dnsLockUp.h
